--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
 		rel="stylesheet">
 
-	<!-- Bootstrpa Icons -->
+	<!-- Bootstrap Icons -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
 	<!-- FontAwesome JS -->
 	<script src="https://kit.fontawesome.com/51180ff5bb.js" crossorigin="anonymous"></script>
 	<!-- Theme CSS -->
-	<link id="theme-style" rel="stylesheet" href="assets/css/risen.css">
+	<link id="theme-style" rel="stylesheet" href="https://harisheoran-resume.s3.ap-south-1.amazonaws.com/risen.css">
 
 </head>
 
@@ -63,7 +63,7 @@
 				<div class="resume-wrapper mx-auto rounded-2">
 					<div class="resume-header px-4 px-lg-5">
 						<div class="resume-profile-holder text-center">
-							<img class="resume-profile-pic rounded-circle" src="assets/images/profile.png" alt="image">
+							<img class="resume-profile-pic rounded-circle" src="https://harisheoran-resume.s3.ap-south-1.amazonaws.com/profile.png" alt="image">
 
 							<h2 class="resume-name text-uppercase">Harish Sheoran </h2>
 							<div class="resume-role-title text-uppercase">DevOps Engineer</div>
