--- a/website/index.html
+++ b/website/index.html
@@ -24,7 +24,7 @@
 	<!-- FontAwesome JS -->
 	<script src="https://kit.fontawesome.com/51180ff5bb.js" crossorigin="anonymous"></script>
 	<!-- Theme CSS -->
-	<link id="theme-style" rel="stylesheet" href="https://harisheoran-resume.s3.ap-south-1.amazonaws.com/risen.css">
+	<link id="theme-style" rel="stylesheet" href="risen.css">
 
 </head>
 
@@ -63,7 +63,7 @@
 				<div class="resume-wrapper mx-auto rounded-2">
 					<div class="resume-header px-4 px-lg-5">
 						<div class="resume-profile-holder text-center">
-							<img class="resume-profile-pic rounded-circle" src="https://harisheoran-resume.s3.ap-south-1.amazonaws.com/profile.png" alt="image">
+							<img class="resume-profile-pic rounded-circle" src="profile.png" alt="image">
 
 							<h2 class="resume-name text-uppercase">Harish Sheoran </h2>
 							<div class="resume-role-title text-uppercase">DevOps Engineer</div>
