--- a/website/index.html
+++ b/website/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Harish's Resume</title>
+	<title>Harish Sheoran</title>
 
 	<!-- Meta -->
 	<meta charset="utf-8">
