minor change in website

--- a/website/index.html
+++ b/website/index.html
@@ -79,7 +79,7 @@
 									</li>
 									<li class="list-inline-item me-md-3 me-lg-5"><i
 											class="resume-contact-icon bi bi-envelope me-2"></i>
-										harishsheoran01@gmail.com</li>
+										harishieoran01@gmail.com</li>
 									<li class="list-inline-item me-lg-5"><i
 											class="resume-contact-icon bi bi-globe me-2"></i>
 										https://harisheoran.github.io/</li>
@@ -126,7 +126,7 @@
 												</div>
 												<h3 class="resume-position-title mb-1"><a
 														href="https://harisheoran.github.io/projects/opsdock/"
-														target="_blank">Kubernetes
+														target="_blank">k8s
 														DevOps Integration</a>
 												</h3>
 
