--- a/website/index.html
+++ b/website/index.html
@@ -387,7 +387,7 @@
 
 	<script>
 		window.onload = function () {
-			fetch('http://13.232.228.220:4000/')
+			fetch('https://13.232.228.220:4000')
 				.then(response => {
 					if (!response.ok) {
 						throw new Error('Network response was not ok');
